--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "3030:3030"
     build: .
-    command: smashing start
+    command: smashing start -a 0.0.0.0
     env_file:
       - .env.docker
     tty: true
